--- a/server/package.json
+++ b/server/package.json
@@ -2,17 +2,10 @@
 	"dependencies": {
 		"@apollo/server": "^4.3.3",
 		"@types/cors": "^2.8.13",
-		"@typescript-eslint/eslint-plugin": "5.36.1",
 		"apollo-server-core": "^3.11.1",
 		"apollo-server-errors": "^3.3.1",
 		"class-validator": "^0.14.0",
 		"cors": "^2.8.5",
-		"eslint": "^8.33.0",
-		"eslint-config-prettier": "^8.6.0",
-		"eslint-config-standard-with-typescript": "^34.0.0",
-		"eslint-plugin-import": "^2.27.5",
-		"eslint-plugin-n": "^15.6.1",
-		"eslint-plugin-promise": "^6.1.1",
 		"graphql": "^16.6.0",
 		"node": "~16.19.0",
 		"pg": "^8.9.0",
@@ -22,5 +15,16 @@
 		"type-graphql": "^1.1.1",
 		"typeorm": "^0.3.11",
 		"typescript": "^4.9.5"
+	},
+	"devDependencies": {
+		"@typescript-eslint/eslint-plugin": "5.51.0",
+		"@typescript-eslint/parser": "^5.51.0",
+		"eslint": "^8.33.0",
+		"eslint-config-prettier": "^8.6.0",
+		"eslint-config-standard-with-typescript": "^34.0.0",
+		"eslint-plugin-import": "^2.27.5",
+		"eslint-plugin-n": "^15.6.1",
+		"eslint-plugin-promise": "^6.1.1",
+		"eslint-plugin-react": "^7.32.2"
 	}
 }
