--- a/server/package.json
+++ b/server/package.json
@@ -1,30 +1,34 @@
 {
-	"dependencies": {
-		"@apollo/server": "^4.3.3",
-		"@types/cors": "^2.8.13",
-		"apollo-server-core": "^3.11.1",
-		"apollo-server-errors": "^3.3.1",
-		"class-validator": "^0.14.0",
-		"cors": "^2.8.5",
-		"graphql": "^16.6.0",
-		"node": "~16.19.0",
-		"pg": "^8.9.0",
-		"reflect-metadata": "^0.1.13",
-		"ts-dotenv": "^0.9.1",
-		"ts-node-dev": "^2.0.0",
-		"type-graphql": "^1.1.1",
-		"typeorm": "^0.3.11",
-		"typescript": "^4.9.5"
-	},
-	"devDependencies": {
-		"@typescript-eslint/eslint-plugin": "5.51.0",
-		"@typescript-eslint/parser": "^5.51.0",
-		"eslint": "^8.33.0",
-		"eslint-config-prettier": "^8.6.0",
-		"eslint-config-standard-with-typescript": "^34.0.0",
-		"eslint-plugin-import": "^2.27.5",
-		"eslint-plugin-n": "^15.6.1",
-		"eslint-plugin-promise": "^6.1.1",
-		"eslint-plugin-react": "^7.32.2"
-	}
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node-dev src/index.ts"
+  },
+  "dependencies": {
+    "@types/cors": "^2.8.13",
+    "apollo-server": "3.11.1",
+    "apollo-server-core": "^3.11.1",
+    "apollo-server-errors": "^3.3.1",
+    "class-validator": "^0.14.0",
+    "cors": "^2.8.5",
+    "graphql": "^16.6.0",
+    "node": "~16.19.0",
+    "pg": "^8.9.0",
+    "reflect-metadata": "^0.1.13",
+    "ts-dotenv": "^0.9.1",
+    "ts-node-dev": "^2.0.0",
+    "type-graphql": "^1.1.1",
+    "typeorm": "^0.3.11",
+    "typescript": "^4.9.5"
+  },
+  "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "5.51.0",
+    "@typescript-eslint/parser": "^5.51.0",
+    "eslint": "^8.33.0",
+    "eslint-config-prettier": "^8.6.0",
+    "eslint-config-standard-with-typescript": "^34.0.0",
+    "eslint-plugin-import": "^2.27.5",
+    "eslint-plugin-n": "^15.6.1",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-react": "^7.32.2"
+  }
 }
