--- a/server/package.json
+++ b/server/package.json
@@ -10,7 +10,7 @@
     "apollo-server-errors": "^3.3.1",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
-    "graphql": "^16.6.0",
+    "graphql": "15.3.0",
     "node": "~16.19.0",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
