--- a/server/package.json
+++ b/server/package.json
@@ -8,6 +8,7 @@
     "apollo-server": "3.11.1",
     "apollo-server-core": "^3.11.1",
     "apollo-server-errors": "^3.3.1",
+    "argon2": "^0.30.3",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
     "graphql": "15.3.0",
