--- a/server/package.json
+++ b/server/package.json
@@ -11,7 +11,9 @@
     "argon2": "^0.30.3",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
+    "express": "^4.18.2",
     "graphql": "15.3.0",
+    "jsonwebtoken": "^9.0.0",
     "node": "~16.19.0",
     "pg": "^8.9.0",
     "reflect-metadata": "^0.1.13",
@@ -22,6 +24,7 @@
     "typescript": "^4.9.5"
   },
   "devDependencies": {
+    "@types/jsonwebtoken": "^9.0.1",
     "@typescript-eslint/eslint-plugin": "5.51.0",
     "@typescript-eslint/parser": "^5.51.0",
     "eslint": "^8.33.0",
