--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,8 @@
 {
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node-dev src/index.ts"
+    "start": "ts-node-dev src/index.ts",
+    "resetDB": "ts-node-dev src/resetDb.ts"
   },
   "dependencies": {
     "@types/cors": "^2.8.13",
@@ -11,7 +12,7 @@
     "argon2": "^0.30.3",
     "class-validator": "^0.14.0",
     "cors": "^2.8.5",
-    "express": "^4.18.2",
+    "express": "4.18.2",
     "graphql": "15.3.0",
     "jsonwebtoken": "^9.0.0",
     "node": "~16.19.0",
