--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,6 +1,8 @@
 FROM node:16.19-alpine
 
-
+RUN apk --no-cache add curl
+RUN apk add make g++ python3 git
+RUN npm i -g node-pre-gyp
 RUN npm i -g pnpm
 
 RUN mkdir /app
@@ -16,4 +18,6 @@ COPY tsconfig.json .
 COPY .eslintrc.js .
 COPY .env .
 
-CMD pnpm start
+ENTRYPOINT ["tail", "-f", "/dev/null"]
+
+# CMD pnpm start
