--- a/docker-compose.e2e-tests.yml
+++ b/docker-compose.e2e-tests.yml
@@ -21,7 +21,7 @@ services:
       - ./server/src:/app/src
     environment:
       DB_HOST: host.docker.internal
-      CORS_ALLOWED_ORIGINS: http://host.docker.internal:3000
+      CORS_ALLOWED_ORIGINS: http://host.docker.internal:3000,http://localhost:3000
       SERVER_HOST: backend
     healthcheck:
       test: "curl --fail --request GET -H 'content-type:application/json' --url 'http://localhost:4000/graphql?query=%7B__typename%7D'"
