--- a/package.json
+++ b/package.json
@@ -3,20 +3,23 @@
     "version": "1.0.0",
     "description": "",
     "scripts": {
-      "integration-tests": "docker compose -f docker-compose.integration-tests.yml up --build --exit-code-from testrunner",
-      "integration-tests:backend-only": "docker compose -f docker-compose.integration-tests.yml up testDB backend",
-      "e2e-tests": "REACT_APP_GRAPHQL_API_URL=http://host.docker.internal:4000 docker compose -f docker-compose.e2e-tests.yml up --build --exit-code-from testrunner --remove-orphans",
-      "e2e-tests:app-only": "docker compose -f docker-compose.e2e-tests.yml up testDB backend client --build   --remove-orphans",
-      "start": "docker compose -f docker-compose.yml up --build"
+        "integration-tests": "docker compose -f docker-compose.integration-tests.yml up --build --exit-code-from testrunner",
+        "integration-tests:backend-only": "docker compose -f docker-compose.integration-tests.yml up testDB backend",
+        "e2e-tests": "REACT_APP_GRAPHQL_API_URL=http://host.docker.internal:4000 docker compose -f docker-compose.e2e-tests.yml up --build --exit-code-from testrunner --remove-orphans",
+        "e2e-tests:app-only": "docker compose -f docker-compose.e2e-tests.yml up testDB backend client --build   --remove-orphans",
+        "start": "docker compose -f docker-compose.yml up --build"
     },
     "repository": {
-      "type": "git",
-      "url": "git+https://github.com/karimmakhloufi/wilders-book-livecoding.git"
+        "type": "git",
+        "url": "git+https://github.com/karimmakhloufi/wilders-book-livecoding.git"
     },
     "author": "",
     "license": "ISC",
     "bugs": {
-      "url": "https://github.com/karimmakhloufi/wilders-book-livecoding/issues"
+        "url": "https://github.com/karimmakhloufi/wilders-book-livecoding/issues"
     },
-    "homepage": "https://github.com/karimmakhloufi/wilders-book-livecoding#readme"
-  }
+    "homepage": "https://github.com/karimmakhloufi/wilders-book-livecoding#readme",
+    "devDependencies": {
+        "@playwright/test": "^1.32.3"
+    }
+}
