--- a/native-client/package.json
+++ b/native-client/package.json
@@ -11,12 +11,16 @@
   },
   "dependencies": {
     "@apollo/client": "3.7.3",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
     "@types/react": "~18.0.27",
     "dotenv": "^16.0.3",
     "expo": "~48.0.11",
     "expo-status-bar": "~1.4.4",
     "react": "18.2.0",
     "react-native": "0.71.6",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0",
     "typescript": "^4.9.4"
   },
   "devDependencies": {
