--- a/native-client/package.json
+++ b/native-client/package.json
@@ -21,7 +21,8 @@
     "react-native": "0.71.6",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "typescript": "^4.9.4"
+    "typescript": "^4.9.4",
+    "expo-secure-store": "~12.1.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
