--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.8.0",
     "react-router-dom": "6.4.2",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
@@ -48,10 +49,10 @@
     ]
   },
   "devDependencies": {
-    "@types/testing-library__jest-dom": "^5.14.5",
     "@graphql-codegen/cli": "2.6.1",
     "@graphql-codegen/typescript": "2.4.3",
     "@graphql-codegen/typescript-operations": "2.3.0",
-    "@graphql-codegen/typescript-react-apollo": "3.2.5"
+    "@graphql-codegen/typescript-react-apollo": "3.2.5",
+    "@types/testing-library__jest-dom": "^5.14.5"
   }
 }
