--- a/.github/workflows/clients.yml
+++ b/.github/workflows/clients.yml
@@ -3,12 +3,12 @@ name: tests
 on: pull_request
   
 jobs:
-  test-on-develop:
+  test-on-pull-request:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
         uses: actions/checkout@v3
       - name: Install npm and deps
-        uses: cd client && npm i
+        run: cd client && npm i
       - name: Go to client and run tests
-        uses: cd client && npm run test
+        run: cd client && npm run test
