--- a/.github/workflows/clients.yml
+++ b/.github/workflows/clients.yml
@@ -8,7 +8,16 @@ jobs:
     steps:
       - name: Check out code
         uses: actions/checkout@v3
-      - name: Install npm and deps
-        run: cd client && npm i
-      - name: Go to client and run tests
-        run: cd client && npm run test
+      - name: Make envfile
+        uses: SpicyPizza/create-envfile@v1.3
+        with:
+          envkey_JWT_PRIVATE_KEY: zeyfgzeigfyzegfyuzegf
+          envkey_NODE_ENV: "development"
+          envkey_CORS_ALLOWED_ORIGINS: "http://localhost:3000,http://localhost:4000"
+          envkey_SERVER_HOST: "localhost"
+          envkey_SERVER_PORT: "4000"
+          envkey_DB_HOST: localhost
+          directory: server
+          file_name: .env
+      - name: Run integration test
+        run: npm run integration-tests
