--- a/docker-compose.integration-tests.yml
+++ b/docker-compose.integration-tests.yml
@@ -21,6 +21,10 @@ services:
       - ./server/src:/app/src
     environment:
       DB_HOST: testDB
+      DB_USER: postgres
+      DB_PASS: postgres
+      DB_NAME: postgres
+      DB_PORT: 5432
     healthcheck:
       test: 'curl --fail --request GET -H ''content-type:application/json'' --url ''http://localhost:4000/graphql?query=%7B__typename%7D'''
       interval: 5s
