--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -3,7 +3,7 @@ name: e2e-tests
 on: pull_request
 
 jobs:
-  e2e-tests:
+  test-on-pull-request:
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
@@ -17,10 +17,6 @@ jobs:
           envkey_SERVER_HOST: "localhost"
           envkey_SERVER_PORT: "4000"
           envkey_DB_HOST: localhost
-          envkey_DB_USER: postgres
-          envkey_DB_PASS: postgres
-          envkey_DB_NAME: postgres
-          envkey_DB_PORT: 5432
           directory: server
           file_name: .env
       - name: Run e2e tests
