--- a/e2e-tests/.env
+++ b/e2e-tests/.env
@@ -4,3 +4,7 @@ CORS_ALLOWED_ORIGINS="http://localhost:3000,http://localhost:4000"
 SERVER_HOST="localhost"
 SERVER_PORT="4000"
 DB_HOST=localhost
+DB_USER=postgres
+DB_PASS=postgres
+DB_NAME=postgres
+DB_PORT=5432
