workflow build front

--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -23,5 +23,11 @@
 #           envkey_DB_PORT: 5432
 #           directory: server
 #           file_name: .env
+#       - name: Make envfile client
+#         uses: SpicyPizza/create-envfile@v1.3
+#         with:
+#           envkey_REACT_APP_GRAPHQL_API_URL: http://localhost:4000
+#           directory: client
+#           file_name: .env
 #       - name: Run e2e tests
 #         run: npm run e2e-tests
