workflow erreur ci back

--- a/client/Dockerfile.production
+++ b/client/Dockerfile.production
@@ -1,19 +1,18 @@
 FROM node:16.19-alpine
 
 RUN apk --no-cache add curl
-RUN npm i -g pnpm
 
 RUN mkdir /app
 WORKDIR /app
 
 COPY package*.json .
-COPY pnpm* .
 COPY .npmrc .
 
-RUN pnpm i
+RUN npm i
+RUN npm i -g serve
 
-COPY src ./src
-COPY public ./public
+COPY src src
+COPY public public
 COPY tsconfig.json .
 COPY codegen.yml .
 
