--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   db:
     restart: always
-    image: postgres:15-alpine
+    image: postgis/postgis:15-3.3-alpine
     environment:
       POSTGRES_PASSWORD: postgres
       PGUSER: postgres
