add hereapi key in integration test and end to end test .env

--- a/integration-tests/.env.example
+++ b/integration-tests/.env.example
@@ -9,3 +9,4 @@ DB_PASS=postgres
 DB_NAME=postgres
 DB_PORT=5432
 GRAPHQL_API_URL=http://localhost:4000
+HereApiKey=P_cC9-TJ-odVVXPLOOyabwU7n7TqMvCpLWlMIbGWep0
