--- a/.github/workflows/e2e-tests.yml
+++ b/.github/workflows/e2e-tests.yml
@@ -21,6 +21,7 @@
 #           envkey_DB_PASS: postgres
 #           envkey_DB_NAME: postgres
 #           envkey_DB_PORT: 5432
+#           envkey_HereApiKey=P_cC9-TJ-odVVXPLOOyabwU7n7TqMvCpLWlMIbGWep0
 #           directory: server
 #           file_name: .env
 #       - name: Make envfile client
