--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -1,7 +1,7 @@
 name: integration-tests
 
 on: pull_request
-  
+
 jobs:
   test-on-pull-request:
     runs-on: ubuntu-latest
@@ -21,6 +21,7 @@ jobs:
           envkey_DB_PASS: postgres
           envkey_DB_NAME: postgres
           envkey_DB_PORT: 5432
+          envkey_HereApiKey: P_cC9-TJ-odVVXPLOOyabwU7n7TqMvCpLWlMIbGWep0
           directory: server
           file_name: .env
       - name: Run integration test
