--- a/server/package.json
+++ b/server/package.json
@@ -25,6 +25,7 @@
     "apollo-server-core": "^3.11.1",
     "apollo-server-errors": "^3.3.1",
     "argon2": "^0.30.3",
+    "axios": "^1.5.0",
     "class-validator": "^0.14.0",
     "cookie": "^0.5.0",
     "cors": "^2.8.5",
