definir departurecity et arrivalcity

--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -4,6 +4,8 @@ on: pull_request
 
 jobs:
   test-on-pull-request:
+    env:
+      HereApiKey: ${{secrets.HEREAPIKEY}}
     runs-on: ubuntu-latest
     steps:
       - name: Check out code
