--- a/docker-compose.integration-tests.yml
+++ b/docker-compose.integration-tests.yml
@@ -21,8 +21,9 @@ services:
       - ./server/src:/app/src
     environment:
       DB_HOST: testDB
+      HereApiKey: ${{secrets.HEREAPIKEY}}
     healthcheck:
-      test: 'curl --fail --request GET -H ''content-type:application/json'' --url ''http://localhost:4000/graphql?query=%7B__typename%7D'''
+      test: "curl --fail --request GET -H 'content-type:application/json' --url 'http://localhost:4000/graphql?query=%7B__typename%7D'"
       interval: 5s
       timeout: 5s
       retries: 10
@@ -31,7 +32,7 @@ services:
         condition: service_healthy
 
   testrunner:
-    build: 
+    build:
       dockerfile: integration-tests/Dockerfile
       context: ./
     depends_on:
