--- a/.github/workflows/integration-tests.yml
+++ b/.github/workflows/integration-tests.yml
@@ -5,8 +5,7 @@ on: pull_request
 jobs:
   test-on-pull-request:
     env:
-      HereApiKey: ${{secrets.HEREAPIKEY}}
-
+      HereApiKey: P_cC9-TJ-odVVXPLOOyabwU7n7TqMvCpLWlMIbGWep0
     runs-on: ubuntu-latest
     steps:
       - name: Print Environment variable
