--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -1,6 +1,6 @@
 services:
   prodDB:
-    image: postgres:15-alpine
+    image: postgis/postgis:15-3.3-alpine
     environment:
       - POSTGRES_PASSWORD=${DB_PASS:-postgres}
       - POSTGRES_USER=${DB_USER:-postgres}
