--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -30,6 +30,7 @@ services:
       - SERVER_PORT=${SERVER_PORT:-4000}
       - JWT_PRIVATE_KEY=${JWT_PRIVATE_KEY}
       - CORS_ALLOWED_ORIGINS=${CORS_ALLOWED_ORIGINS:-http://localhost:8000}
+      - HERE_API_KEY=${HERE_API_KEY}
     image: florian59c/2211-wns-neumann-copilot-server
     healthcheck:
       test: "curl --fail --request GET -H 'content-type:application/json' --url 'http://localhost:4000/graphql?query=%7B__typename%7D'"
